; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libmemstat/extr_memstat_all.c_memstat_sysctl_all.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libmemstat/extr_memstat_all.c_memstat_sysctl_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.memory_type_list = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @memstat_sysctl_all(%struct.memory_type_list* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.memory_type_list*, align 8
  %5 = alloca i32, align 4
  store %struct.memory_type_list* %0, %struct.memory_type_list** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.memory_type_list*, %struct.memory_type_list** %4, align 8
  %7 = load i32, i32* %5, align 4
  %8 = call i64 @memstat_sysctl_malloc(%struct.memory_type_list* %6, i32 %7)
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %18

11:                                               ; preds = %2
  %12 = load %struct.memory_type_list*, %struct.memory_type_list** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i64 @memstat_sysctl_uma(%struct.memory_type_list* %12, i32 %13)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  store i32 -1, i32* %3, align 4
  br label %18

17:                                               ; preds = %11
  store i32 0, i32* %3, align 4
  br label %18

18:                                               ; preds = %17, %16, %10
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i64 @memstat_sysctl_malloc(%struct.memory_type_list*, i32) #1

declare dso_local i64 @memstat_sysctl_uma(%struct.memory_type_list*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
